--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,34 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  layouts:
+    application:
+      title: Ruby on Rails Tutorial Sample App
+      english: English
+      vietnamese: Vietnamese
+  static_pages:
+    home:
+      title: Home
+      sample_app: Sample App
+      content_html: This is the home page for the %{href} sample application.
+      href_title: Ruby on Rails Tutorial
+    help:
+      title: Help
+      content_help_html: Get help on the Ruby on Rails Tutorial at the %{help_link}
+      content_book_html: To get help on this sample app, see the %{book_link}
+      help_link_title: Rails Tutorial help section
+      book_link_title_html: <em>Ruby on Rails Tutorial</em> book.
+    contact:
+      title: Contact
+      content_html: Contact the Ruby on Rails Tutorial about the sample app at the %{contact_link}
+      contact_link_title: contact page
+    about:
+      title: About
+      content_rails_html: The %{rails_tutorial_link},
+      content_learn_html: part of the %{learn_enough_link} family of tutorials,
+      content_book_html: is a %{rails_tutorial_book_link}
+      content_cast_html: and %{screen_cast_link}
+      content_home_html: to teach web development with %{rails_home_page_link}. This is the sample app for the tutorial.
+      rails_tutorial_link_title_html: <em>Ruby on Rails Tutorial</em>
+      learn_enough_link_title: Learn Enough
+      rails_tutorial_book_link_title: book
+      screen_cast_link_title: screencast series
+      rails_home_page_link_title: Ruby on Rails
