--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,11 @@ en:
       languages: Languages
       english: English
       vietnamese: Vietnamese
+      account: Account
+      users: Users
+      profile: Profile
+      settings: Settings
+      log_out: Log out
     footer:
       tutorial_footer_html: The %{tutorial_link}
       author_footer_html: by %{author_link}
@@ -61,3 +66,12 @@ en:
       password: Password
       confirmation: Confirmation
       button: Create my account
+  sessions:
+    new:
+      log_in: Log in
+      new_user: New user?
+      email: Email
+      password: Password
+      sign_up_now: Sign up now
+      error_message: Invalid email/password combination
+      sign_up_failed: Sign up failed
