--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,6 +38,7 @@ en:
       content_html: This is the home page for the %{href} sample application.
       href_title: Ruby on Rails Tutorial
       sign_up: Sign up now!
+      micropost_feed: Micropost Feed
     help:
       title: Help
       content_help_html: Get help on the Ruby on Rails Tutorial at the %{help_link}
@@ -64,7 +65,15 @@ en:
     error_messages:
       title: The form contains
       error: error
+    micropost_form:
+      new_post: Compose new micropost...
+      post: Post
+    user_info:
+      profile: View my profile
+      micropost: micropost
   users:
+    show:
+      microposts: Microposts
     index:
       title: All users
     form: 
@@ -136,3 +145,16 @@ en:
     sub_title: To reset your password click the link below
     expiration: This link will expire in two hours.
     warning: If you did not request your password to be reset, please ignore this email and your password will stay as it is.
+  microposts:
+    create:
+      created_notification: Micropost created!
+      fail_notification: Micropost was created fail!
+    destroy:
+      destroy_notification: Micropost deleted!
+      fail_destroy_notification: Micropost deleted fail!
+    picture_size_warning: Picture should be less than 5MB
+    micropost:
+      posted: Posted
+      ago: ago
+      delete: Delete
+      confirm: You sure
